gcc/testsuite/gdc.test/fail_compilation/fail5953s2.d
void main()
{
    struct S{}
    S s3 = {,,,}; // invalid, but compiles
}
